# SCCG

./: .gitignore  CMakeLists.txt  README.md  genome  main  main.cpp  orgc  orgc.cpp  orgd.cpp  prepare_data.sh  sccg  sccg.cpp
src/: Compressor.cpp  Compressor.h  Decoder.h  Decompressor.cpp  Decompressor.h  Encoder.cpp  Encoder.h  FastaParser.cpp  FastaParser.h  KmerIndex.cpp  KmerIndex.h  MatchFinder.cpp  MatchFinder.h  Position.h  Utils.h
